Adjust steps for refitting pipeline with best features

--- a/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
+++ b/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
@@ -999,6 +999,214 @@
         "    }\n",
         "}"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Extensive GridSearch CV"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "search = HyperparameterOptimizationSearch(models=models_search, params=params_search)\n",
+        "search.fit(X_train, y_train, scoring = 'r2', n_jobs=-1, cv=5)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Check results"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "grid_search_summary, grid_search_pipelines = search.score_summary(sort_by='mean_score')\n",
+        "grid_search_summary"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Check the best model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "best_model = grid_search_summary.iloc[0,0]\n",
+        "best_model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Parameters for best model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "grid_search_pipelines[best_model].best_params_"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Define the best regressor"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "best_regressor_pipeline_pca = grid_search_pipelines[best_model].best_estimator_\n",
+        "best_regressor_pipeline_pca"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Evaluate Regressor on Train and Tests datasets"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "regression_performance(X_train, y_train, X_test, y_test,best_regressor_pipeline_pca)\n",
+        "regression_evaluation_plots(X_train, y_train, X_test, y_test,\n",
+        "                            best_regressor_pipeline_pca)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Regressor Model Analysis findings\n",
+        "\n",
+        "* A Regressor model was chosen to predict sale price for a given property.\n",
+        "\n",
+        "* Both feature selection and PCA produced close results and met business requirement 1. Despite by a small margin, feature \n",
+        "selection performed better. Therefore, the best pipeline to use will be that of feature selection in this case. \n",
+        "\n",
+        "* Feature selection achieved an R2 Score: 0.97 on the train set and an R2 Score: 0.78 on the test set.\n",
+        "\n",
+        "* The client requirement is for an R2 Score of 0.75\\n\""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Best Features for the Subsets"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X_train = X_train.filter(best_features)\n",
+        "X_test = X_test.filter(best_features)\n",
+        "\n",
+        "print(\"* Train set:\", X_train.shape, y_train.shape, \"\\n* Test set:\", X_test.shape, y_test.shape)\n",
+        "X_train.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Refit pipeline with optimal determined features"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Rewrite Pipeline"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def PipelineOptimization(model):\n",
+        "    pipeline_base = Pipeline([\n",
+        "\n",
+        "      (\"NumericLogTransform\", vt.LogTransformer(variables=['1stFlrSF',\n",
+        "                                                           'GrLivArea'])),\n",
+        "\n",
+        "      (\"feat_scaling\", StandardScaler()),\n",
+        "\n",
+        "      (\"model\", model),\n",
+        "\n",
+        "    ])\n",
+        "\n",
+        "    return pipeline_base"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
     }
   ],
   "metadata": {
