Add steps to refit pipeline

--- a/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
+++ b/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
@@ -1205,6 +1205,142 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## Grid Search CV – Sklearn"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "At this stage we can use the same model from the previous GridCV search above."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "models_search"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "And the best parameters from the previous GridCV search above."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "best_parameters"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Add the above parameters in manually"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "params_search = {\n",
+        "    'RandomForestRegressor':  {\n",
+        "        'model__max_depth': [18],\n",
+        "        'model__n_estimators': [100]\n",
+        "        }\n",
+        "    }\n",
+        "params_search"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "GridSearch CV"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "search = HyperparameterOptimizationSearch(models=models_search, params=params_search)\n",
+        "search.fit(X_train, y_train, scoring='r2', n_jobs=-1, cv=5)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Check results"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "grid_search_summary, grid_search_pipelines = search.score_summary(sort_by='mean_score')\n",
+        "grid_search_summary"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Check the best model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "best_model = grid_search_summary.iloc[0,0]\n",
+        "best_model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Define the best regressor pipeline"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "best_regressor_pipeline = grid_search_pipelines[best_model].best_estimator_\n",
+        "best_regressor_pipeline"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "---"
       ]
     }
