Include Feature Importance Plot, adjust plot requirements

--- a/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
+++ b/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
@@ -1341,6 +1341,270 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## Assess feature importance"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data_cleaning_feat_eng_steps = 1 # how many data cleaning and feature engineering does your pipeline have?\n",
+        "columns_after_data_cleaning_feat_eng = (Pipeline(best_regressor_pipeline.steps[:data_cleaning_feat_eng_steps])\n",
+        "                                        .transform(X_train)\n",
+        "                                        .columns)\n",
+        "\n",
+        "best_features = columns_after_data_cleaning_feat_eng\n",
+        "\n",
+        "# create DataFrame to display feature importance\n",
+        "df_feature_importance = (pd.DataFrame(data={\n",
+        "          'Feature': columns_after_data_cleaning_feat_eng,\n",
+        "          'Importance': best_regressor_pipeline['model'].feature_importances_})\n",
+        "  .sort_values(by='Importance', ascending=False)\n",
+        "  )\n",
+        "\n",
+        "# The most important features statement and plot\n",
+        "print(f\"* These are the {len(best_features)} most important features in descending order. \"\n",
+        "      f\"The model was trained on them: \\n{best_features}\")\n",
+        "\n",
+        "df_feature_importance.plot(kind='bar',x='Feature',y='Importance')\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Evaluate Performance on Train and Test datasets"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "regression_performance(X_train, y_train, X_test, y_test, best_regressor_pipeline)\n",
+        "regression_evaluation_plots(X_train, y_train, X_test, y_test, best_regressor_pipeline)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Save datasets and models "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We will generate the following files\n",
+        "\n",
+        "* Train set\n",
+        "* Test set\n",
+        "* Modeling pipeline\n",
+        "* features importance plot"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "\n",
+        "version = 'v2'\n",
+        "file_path = f'outputs/ml_pipeline/predict_saleprice/{version}'\n",
+        "\n",
+        "try:\n",
+        "  os.makedirs(name=file_path)\n",
+        "except Exception as e:\n",
+        "  print(e)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Train Set : Features and Target"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(X_train.shape)\n",
+        "X_train.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X_train.to_csv(f\"{file_path}/X_train.csv\", index=False)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(y_train.shape)\n",
+        "y_train.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_train.to_csv(f\"{file_path}/y_train.csv\", index=False)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Test Set: Features and Target"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(X_test.shape)\n",
+        "X_test.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X_test.to_csv(f\"{file_path}/X_test.csv\", index=False)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(y_test.shape)\n",
+        "y_test.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_test.to_csv(f\"{file_path}/y_test.csv\", index=False)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Modelling pipeline"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "best_regressor_pipeline"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import joblib\n",
+        "joblib.dump(value=best_regressor_pipeline, filename=f\"{file_path}/best_regressor_pipeline.pkl\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Feature Importance Plot"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_feature_importance.to_csv(f\"{file_path}/feature_importance.csv\", index=False)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_feature_importance.plot(kind='bar',x='Feature',y='Importance')\n",
+        "plt.savefig(f'{file_path}/feature_importance.png', bbox_inches='tight')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# regression_evaluation_plots(X_train, y_train, X_test, y_test, best_regressor_pipeline)\n",
+        "pred_train = best_regressor_pipeline.predict(X_train)\n",
+        "pred_test = best_regressor_pipeline.predict(X_test)\n",
+        "alpha_scatter=0.5\n",
+        "\n",
+        "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(12,6))\n",
+        "sns.scatterplot(x=y_train , y=pred_train, alpha=alpha_scatter, ax=axes[0])\n",
+        "sns.lineplot(x=y_train , y=y_train, color='red', ax=axes[0])\n",
+        "axes[0].set_xlabel(\"Actual\")\n",
+        "axes[0].set_ylabel(\"Predictions\")\n",
+        "axes[0].set_title(\"Train Set\")\n",
+        "\n",
+        "sns.scatterplot(x=y_test , y=pred_test, alpha=alpha_scatter, ax=axes[1])\n",
+        "sns.lineplot(x=y_test , y=y_test, color='red', ax=axes[1])\n",
+        "axes[1].set_xlabel(\"Actual\")\n",
+        "axes[1].set_ylabel(\"Predictions\")\n",
+        "axes[1].set_title(\"Test Set\")\n",
+        "\n",
+        "plt.savefig(f'{file_path}/regression_evaluation_plots.png', bbox_inches='tight')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "---"
       ]
     }
