Adjust and add to conclusion for Sale Price Prediction

--- a/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
+++ b/jupyter_notebooks/05_Sales_Price_Prediction.ipynb
@@ -1416,6 +1416,11 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -1606,6 +1611,32 @@
       "metadata": {},
       "source": [
         "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Conclusion"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The following files were generated:\n",
+        "\n",
+        "* Train set\n",
+        "* Test set\n",
+        "* Modeling pipeline\n",
+        "* features importance plot\n",
+        "\n",
+        "* A Regressor model was chosen to predict sale price for a given property suggesting that feature selection and PCA produced close results that meet the business requirements. However, with a small margin we found that feature selction had better performance and was therefore chosen as the best pipeline for our buiness case. The following results were produce to meet our targets:\n",
+        "\n",
+        "* Feature selection achieved an R2 Score: 0.97 on the train set and an R2 Score: 0.78 on the test set.\n",
+        "\n",
+        "* The client requirement is for an R2 Score of 0.75\\n\"\n",
+        "\n"
       ]
     }
   ],
